force-app/main/default/objects/lwapic__Integration_Channel__c/lwapic__Integration_Channel__c.object-meta.xml
<CustomObject>
    <description>Integration Channel</description>
    <label>200 OK Studio</label>
    <nameField>
        <label>Channel Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>200 OK Studio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>