force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Advance_Settings__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Advance_Settings__c</fullName>
    <label>Advance Settings</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>