force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Body_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Body_Content_Type__c</fullName>
    <label>Body Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JSON</fullName>
                <default>true</default>
                <label>JSON</label>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>TEXT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>