force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Body_Type__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Body_Type__c</fullName>
    <label>Body Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
            <value>
                <fullName>formData</fullName>
            </value>
            <value>
                <fullName>urlEncoded</fullName>
            </value>
            <value>
                <fullName>raw</fullName>
            </value>
            <value>
                <fullName>apexClass</fullName>
            </value>
            <value>
                <fullName>binary</fullName>
            </value>
            <value>
                <fullName>etl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>