force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Request_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Request_Data_Source__c</fullName>
    <label>Request Data Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>