force-app/main/default/objects/lwapic__Integration_Channel__c/fields/lwapic__Site__c.field-meta.xml
<CustomField>
    <fullName>lwapic__Site__c</fullName>
    <description>it Stores the selected site for webhook</description>
    <label>Site</label>
    <type>TextArea</type>
</CustomField>