force-app/main/default/objects/lwapic__Integration_Channel__c/listViews/lwapic__Active_Channels.listView-meta.xml
<ListView>
    <fullName>lwapic__Active_Channels</fullName>
    <columns>NAME</columns>
    <columns>lwapic__Channel_Name__c</columns>
    <columns>lwapic__Service_Name__c</columns>
    <columns>lwapic__Method__c</columns>
    <columns>lwapic__Version__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>lwapic__IsActive__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Active Channels</label>
</ListView>