force-app/main/default/objects/lwapic__Integration_Channel__c/listViews/lwapic__All.listView-meta.xml
<ListView>
    <fullName>lwapic__All</fullName>
    <columns>NAME</columns>
    <columns>lwapic__Channel_Name__c</columns>
    <columns>lwapic__Service_Name__c</columns>
    <columns>lwapic__Version__c</columns>
    <columns>lwapic__IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>